NAS-116562: Fix css alignments and font styles (#7222)

--- a/src/app/pages/storage/components/manager/manager.component.scss
+++ b/src/app/pages/storage/components/manager/manager.component.scss
@@ -94,17 +94,13 @@ h4 {
 .data-div {
   align-items: center;
   display: flex;
-  margin-left: 102px;
-  padding: 0;
-  width: 477px;
+  margin-bottom: 4px;
+  margin-left: 118px;
+  padding: 0 12px 0 0;
 }
 
 .data-title {
   flex: 1;
-}
-
-.duplicate-button {
-  width: 60px;
 }
 
 #pool-manager__encryption-checkbox {
